--- a/2-guia/ejercicios-2/ej-3-2.tex
+++ b/2-guia/ejercicios-2/ej-3-2.tex
@@ -8,7 +8,8 @@
   \end{multicols}
 \end{enunciado}
 
-Para resolver estos ejercicios haremos uso la notas teóricas, en particular \ref{refPropSumatoria-Productoria} y \ref{refSumaGauss}.
+Para resolver estos ejercicios haremos uso la notas teóricas, en particular
+\ref{refPropSumatoria-Productoria} y \ref{refSumaGauss}.
 
 \begin{enumerate}[label=\roman*)]
   \item
